# fabro

./: AGENTS.md  Cargo.toml
.config/: nextest.toml
.fabro/: project.toml
apps/fabro-web/: package.json  react-doctor.config.json
apps/fabro-web/app/: app.css  install-app.tsx  router.tsx
apps/fabro-web/scripts/: build.test.ts
docs/internal/: events.md  fabro-event-schema-v2-concrete-shape.md  llm-client-resolution.md  server-secrets-strategy.md
docs/plans/: 2026-04-22-004-refactor-worker-jwt-auth-plan.md  2026-04-25-001-refactor-docker-sandbox-clone-based-plan.md  2026-05-03-fix-agent-stage-cancellation-plan.md  2026-05-08-remove-retro-stage-plan.md  2026-05-10-sandbox-details-tab-plan.md  2026-05-11-daytona-real-agent-smoke-qa-plan.md  2026-05-21-wall-and-active-time-metrics-plan.md  2026-05-22-002-remove-session-sandboxes-feature-flag-plan.md
docs/public/: docs.json
docs/public/administration/: sandboxing.mdx  server-configuration.mdx
docs/public/api-reference/: fabro-api.yaml
docs/public/changelog/: 2026-02-26.mdx  2026-03-02.mdx  2026-03-10.mdx  2026-03-11.mdx  2026-04-08.mdx  2026-04-23.mdx
docs/public/core-concepts/: agents.mdx  models.mdx
docs/public/execution/: context.mdx
lib/crates/fabro-acp/: Cargo.toml
lib/crates/fabro-automation/: Cargo.toml
lib/crates/fabro-automation/src/: error.rs  id.rs  lib.rs  model.rs  store.rs
lib/crates/fabro-validate/: Cargo.toml
lib/crates/fabro-validate/src/: lib.rs
lib/crates/fabro-validate/src/rules/: backend_valid.rs  mod.rs  model_support.rs  node_model_known.rs  stylesheet_model_known.rs
(+378 files in other folders)
