[package]
name = "fabro-validate"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Validation and lint rules for Fabro workflow graphs"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fabro-graphviz = { path = "../fabro-graphviz" }
fabro-model = { path = "../fabro-model" }
fabro-types = { path = "../fabro-types" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
